@@ -1,4 +1,5 @@
 0.08
+ - API change: Add 'data_css' accessor.
  - Regen README file.
 
 0.07 2022-08-16T13:19:57+02:00
